fixed partner alignment

--- a/web/pages/partner.module.sass
+++ b/web/pages/partner.module.sass
@@ -11,6 +11,16 @@
   &:after
     background-color: transparent
     box-shadow: none
+  &::after
+    position: relative
+    margin-bottom: 20px
+    content: ""
+    width: 100%
+    height: 200px
+    padding: 10px
+    @include media(">bigPhone")
+      width: 30%
+      height: 200px
 
 .partner
   position: relative
